--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
+    "@remix-run/serve": "^1.1.3",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.3",
-    "@remix-run/serve": "^1.1.3"
+    "react-responsive": "^9.0.0-beta.6",
+    "remix": "^1.1.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.3"
