--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "remix": "^1.1.3"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3"
+    "@remix-run/dev": "^1.1.3",
+    "@svgr/cli": "^6.2.1"
   },
   "engines": {
     "node": ">=14"
