--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql-request": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.2",
     "react-responsive": "^9.0.0-beta.6",
     "remix": "^1.1.3"
   },
