--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.2",
     "react-responsive": "^9.0.0-beta.6",
+    "react-share": "^4.4.0",
     "remix": "^1.1.3"
   },
   "devDependencies": {
