--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   },
   "dependencies": {
     "@graphcms/rich-text-react-renderer": "^0.4.2",
-    "@remix-run/react": "^1.1.3",
-    "@remix-run/serve": "^1.1.3",
+    "@remix-run/react": "^1.3.2",
+    "@remix-run/vercel": "^1.3.2",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-share": "^4.4.0",
-    "remix": "^1.1.3"
+    "remix": "^1.3.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3",
+    "@remix-run/dev": "^1.3.2",
+    "@remix-run/serve": "^1.3.2",
     "@svgr/cli": "^6.2.1"
   },
   "sideEffects": false
